--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
         <div id="nav_left">
           <ul class="nav_list">
             <li class="nav_item">
-              <a href="#" class="nav_link">GHOSH </a>
+              <a href="#home" class="nav_link">GHOSH </a>
             </li>
           </ul>
         </div>
         <div class="nav_right">
           <ul class="nav_list">
             <li class="nav_item">
-              <a href="#" class="nav_link">Home</a>
+              <a href="#home" class="nav_link">Home</a>
             </li>
             <li class="nav_item">
-              <a href="#" class="nav_link">About Me </a>
+              <a href="#about" class="nav_link">About Me </a>
             </li>
             <li class="nav_item">
-              <a href="#" class="nav_link">projects</a>
+              <a href="#projects" class="nav_link">projects</a>
             </li>
             <li class="nav_item">
-              <a href="#" class="nav_link">contact</a>
+              <a href="#contact" class="nav_link">contact</a>
             </li>
           </ul>
         </div>
@@ -48,10 +48,9 @@
       </nav>
     </header>
 
-    <main class="main">
+    <main class="main" id="home">
       <div class="first_section">
         <div class="first_section-left">
-          <!-- content about your self  -->
           <div>
             Hi! I'm <span id="krishnendu">Krishnendu</span>, a BCA student with
             a strong passion for programming and technology.
@@ -64,7 +63,69 @@
         </div>
       </div>
     </main>
-
+    <hr />
+    <div class="secoend_section" id="about">
+      <div class="secoend_section_left">
+        I am a passionate web developer currently pursuing a Bachelor of
+        Computer Applications (BCA) at Eminent College of Management &
+        Technology. With a strong interest in building dynamic and user-friendly
+        websites, I specialize in the MERN stack (MongoDB, Express.js, React.js,
+        and Node.js).
+        <br />
+        In addition to my work with the MERN stack, I am actively learning
+        Python to deepen my understanding of backend development and expand my
+        programming skill set. I enjoy solving real-world problems through code
+        and continuously strive to improve my development skills.
+      </div>
+      <div class="secoend_section_right">
+        <a href="content.txt" download="krishnendu_curricullam_vite.pdf"
+          ><button class="cV">Downlode CV</button></a
+        >
+      </div>
+    </div>
+    <hr />
+    <div class="third_section" id="projects">
+      <div class="project1">
+        <a href="#"
+          ><img src="./aseests/images/image1.png" alt="tic tac too"
+        /></a>
+      </div>
+      <div class="project2">
+        <a href="#"
+          ><img src="./aseests/images/image2.png" alt="keybord checker"
+        /></a>
+      </div>
+      <div class="project3">
+        <a href="#"
+          ><img src="./aseests/images/image3.png" alt="wether forcasting"
+        /></a>
+      </div>
+    </div>
+    <div class="forth_section" id="contact">
+      <div class="forth_section_left">
+        <span class="social handles">lets conect</span>
+        <a href="#">
+          <img src="./aseests/images/fackbbok.png" alt="fackbook handle"
+        /></a>
+        <a href="#">
+          <img src="./aseests/images/twiter.png" alt="twiter handle"
+        /></a>
+        <a href="#">
+          <img src="./aseests/images/linkdin.png" alt="linkdin handle"
+        /></a>
+      </div>
+      <div class="forth_section_right">
+        <form action="">
+          <label for="name">Enter your first name </label>
+          <input type="text" required name="" />
+          <label for="name">Enter your last name </label>
+          <input type="text" required name="" />
+          <label for="">Enter your email address</label>
+          <input type="email" required name="" />
+          <button type="submit" class="cV">submit</button>
+        </form>
+      </div>
+    </div>
     <script src="./aseests/js/script.js"></script>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
@@ -73,7 +134,7 @@
           "I am a Web Developer",
           "I am a UI/UX Designer",
           "I am a App Developer",
-          "I am aTech Enthusiast",
+          "I am a Tech Enthusiast",
         ],
         typeSpeed: 50,
         backSpeed: 30,
