--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
     <div class="third_section" id="projects">
       <div class="project1">
         <a href="#"
-          ><img src="./aseests/images/image1.png" alt="tic tac too"
+          ><img src="./aseests/images/image1.png" alt="tic tac too" id="#tic_tac_too"
         /></a>
       </div>
       <div class="project2">
         <a href="#"
-          ><img src="./aseests/images/image2.png" alt="keybord checker"
+          ><img src="./aseests/images/1.png" alt="keybord_checker" id="keybord_checker"
         /></a>
       </div>
       <div class="project3">
         <a href="#"
-          ><img src="./aseests/images/image3.png" alt="wether forcasting"
+          ><img src="/aseests/images/cloud_coudy_day_fog_mist_icon.png" alt="wether_forcasting" id="wether_forcasting"
         /></a>
       </div>
     </div>
